Add js_vars function and translations

--- a/instructions/locale/de/LC_MESSAGES/django.po
+++ b/instructions/locale/de/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-13 19:53+0300\n"
-"PO-Revision-Date: 2021-10-13 20:08+0300\n"
+"POT-Creation-Date: 2021-10-15 23:03+0300\n"
+"PO-Revision-Date: 2021-10-15 23:16+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -18,15 +18,15 @@ msgstr ""
 "Language: de\n"
 "X-Generator: Poedit 2.4.2\n"
 
-#: .\instructions\models.py:66
+#: .\instructions\models.py:67
 msgid "Do you want to start the simulation?"
 msgstr "Möchten Sie die Simulation jetzt starten?"
 
-#: .\instructions\models.py:67
+#: .\instructions\models.py:68
 msgid "Yes"
 msgstr "Ja"
 
-#: .\instructions\models.py:67
+#: .\instructions\models.py:68
 msgid "No"
 msgstr "Nein"
 
@@ -231,11 +231,11 @@ msgstr "Willkommen!"
 #: .\instructions\templates\instructions\Intro.html:21
 msgid ""
 "In this survey,\n"
-"        you will participate in a simulation where you will be asked to make "
-"<b>financial decisions</b>."
+"        you will participate in a <b>simulation</b> where you will be asked "
+"to make <b>financial decisions</b>."
 msgstr ""
-"In dieser Studie werden Sie im Rahmen einer <b>Simulation finanzielle "
-"Entscheidungen</b> treffen."
+"In dieser Studie werden Sie im Rahmen einer <b>Simulation</b> verschiedene "
+"<b>finanzielle Entscheidungen</b> treffen."
 
 #: .\instructions\templates\instructions\Intro.html:24
 msgid ""
@@ -245,9 +245,9 @@ msgid ""
 "        Higher or lower amounts are also possible."
 msgstr ""
 "Je nachdem wie Sie sich entscheiden, werden Sie <b>zusätzlich</b> zu Ihrer "
-"Grundvergütung eine <b>Belohnung</b> bekommen können, welche im Durchschnitt "
-"zwischen <b>EUR 10</b> und <b>EUR 23</b> liegt. Höhere bzw. tiefe Beträge "
-"sind auch möglich."
+"Grundvergütung eine <b>Belohnung</b> bekommen können. Diese zusätzliche "
+"Belohnung ist in den meisten zwischen EUR 10 und EUR 23. Höhere bzw. tiefe "
+"Beträge sind aber auch möglich."
 
 #: .\instructions\templates\instructions\Intro.html:28
 msgid ""
@@ -256,7 +256,7 @@ msgid ""
 "        Then, you will participate in a <b>trial</b> round.\n"
 "        Then, before starting with the real simulation,\n"
 "        you will be asked to correctly answer a <b>quiz</b> on the "
-"simulation’s rules."
+"simulation's rules."
 msgstr ""
 "Um Ihre finanzielle Entschädigung für diese Studie zu maximieren, bitten wir "
 "Sie zuerst die <b>Instruktionen</b> aufmerksam zu lesen. Danach werden Sie "
@@ -269,11 +269,8 @@ msgid ""
 "Only participants <b>correctly</b> answering the quiz questions will be\n"
 "        admitted to the real simulation and earn compensation."
 msgstr ""
-"Nur Teilenehmende, die diese Fragen <b>korrekt</b> beantworten, werden zu "
-"der realen Simulation zugelassen. Falls Sie zu der realen Simulation "
-"zugelassen werden, müssen Sie Ihre Entscheidungen ohne große zeitliche "
-"Unterbrüche treffen. Wir bitten Sie die Simulation nur dann zu starten, wenn "
-"Sie genügend Zeit haben diese abzuschließen."
+"<b>Nur</b> Teilenehmende, die diese Fragen korrekt beantworten, werden zu "
+"der realen Simulation zugelassen."
 
 #: .\instructions\templates\instructions\Intro.html:36
 msgid ""
@@ -281,6 +278,6 @@ msgid ""
 "        Please, only start the simulation if you have enough time."
 msgstr ""
 "Falls Sie zu der realen Simulation zugelassen werden, müssen Sie Ihre "
-"Entscheidungen <b>ohne große zeitliche Unterbrüche treffen</b>. Wir bitten "
+"Entscheidungen <b>ohne</b> große zeitliche Unterbrüche treffen. Wir bitten "
 "Sie die Simulation nur dann zu starten, wenn Sie genügend Zeit haben diese "
 "abzuschließen."
