--- a/trial_save/locale/de/LC_MESSAGES/django.po
+++ b/trial_save/locale/de/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-13 19:53+0300\n"
-"PO-Revision-Date: 2021-09-06 14:06+0300\n"
+"POT-Creation-Date: 2021-10-15 23:03+0300\n"
+"PO-Revision-Date: 2021-10-15 22:56+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -676,11 +676,11 @@ msgstr ""
 
 #: .\trial_save\templates\trial_save\Start.html:24
 msgid ""
-"Use this round to explore all features of the game.\n"
+"Use this life to explore all features of the game.\n"
 "        You can access the instructions clicking on the buttons at the "
 "bottom of the page."
 msgstr ""
-"Nutzen Sie diese Runde, um alle Funktionen des Spiels zu erkunden. Sie "
+"Nutzen Sie diese Testleben, um alle Funktionen des Spiels zu erkunden. Sie "
 "können die Anleitung jederzeit aufrufen, indem Sie auf die Schaltflächen "
 "unten auf der Seite klicken."
 
