--- a/result/locale/de/LC_MESSAGES/django.po
+++ b/result/locale/de/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-15 23:03+0300\n"
+"POT-Creation-Date: 2021-10-15 23:33+0300\n"
 "PO-Revision-Date: 2021-10-15 23:27+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -47,8 +47,7 @@ msgid ""
 "For additional compensation, Life %(round_chosen_string)s was chosen.\n"
 "        Your reward on that life was %(points_total)s Euro."
 msgstr ""
-"Für Ihre zusätzliche Vergütung wurde Leben %(round_chosen_string)s "
-"gewählt.\n"
+"Für Ihre zusätzliche Vergütung wurde Leben %(round_chosen_string)s gewählt.\n"
 "        Ihre Belohnung in diesem Leben war %(points_total)s Euro."
 
 #: .\result\templates\result\Result.html:20
@@ -61,11 +60,10 @@ msgid ""
 "        You get %(earn_invest)s Euro from the investment.\n"
 "        Your total reward is %(total)s Euro."
 msgstr ""
-"Sie haben entschieden, %(risk_choice)s%% von Ihrer Belohnung (oder "
-"%(invest)s Euro) in die risikoreiche Anlage zu investieren. Das Ergebnis "
-"der risikoreichen Anlage ist «%(risk_outcome)s». Sie bekommen "
-"%(earn_invest)s Euro mit dieser Investition. Ihre Belohnung beträgt neu "
-"%(total)s Euro."
+"Sie haben entschieden, %(risk_choice)s%% von Ihrer Belohnung (oder %(invest)"
+"s Euro) in die risikoreiche Anlage zu investieren. Das Ergebnis der "
+"risikoreichen Anlage ist «%(risk_outcome)s». Sie bekommen %(earn_invest)s "
+"Euro mit dieser Investition. Ihre Belohnung beträgt neu %(total)s Euro."
 
 #: .\result\templates\result\Result.html:27
 #, python-format
