Change translations in End questionnaire

--- a/borrow/locale/de/LC_MESSAGES/django.po
+++ b/borrow/locale/de/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-15 23:33+0300\n"
+"POT-Creation-Date: 2021-10-19 21:46+0300\n"
 "PO-Revision-Date: 2021-10-15 23:36+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -509,8 +509,8 @@ msgstr ""
 msgid ""
 "For each period in your life, we calculate your balance (in points):\n"
 "        <br>\n"
-"        <b>$$ \\text{End Balance}=\\text{Start Balance}+\\text{Income}-"
-"\\text{Spending} $$</b>"
+"        <b>$$ \\text{End Balance}=\\text{Start Balance}+\\text{Income}-\\text"
+"{Spending} $$</b>"
 msgstr ""
 "Für jede Periode Ihres simulierten Lebens berechnen wir Ihr Guthaben (in "
 "Punkten) wie folgt:\n"
@@ -640,8 +640,8 @@ msgid ""
 msgstr ""
 "Dies ist die letzte Periode des Lebens %(round_num)s. In der letzten Periode "
 "müssen Sie das Startguthaben und das Einkommen, das Sie in dieser Periode "
-"erhalten, ausgeben. Sie geben also %(spend10)s Punkte aus und erhalten "
-"%(points10)s Eurocents als <b>Belohnung</b> in dieser Periode."
+"erhalten, ausgeben. Sie geben also %(spend10)s Punkte aus und erhalten %"
+"(points10)s Eurocents als <b>Belohnung</b> in dieser Periode."
 
 #: .\borrow\templates\borrow\Period10.html:47
 #: .\borrow\templates\borrow\Period2.html:48
