--- a/instructions/locale/de/LC_MESSAGES/django.po
+++ b/instructions/locale/de/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-15 23:33+0300\n"
+"POT-Creation-Date: 2021-10-19 21:46+0300\n"
 "PO-Revision-Date: 2021-10-15 23:33+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -149,8 +149,8 @@ msgstr "Guthaben"
 msgid ""
 "For each period in your life, we calculate your balance (in points):\n"
 "    <br>\n"
-"    <b>$$ \\text{End Balance}=\\text{Start Balance}+\\text{Income}-"
-"\\text{Spending} $$</b>"
+"    <b>$$ \\text{End Balance}=\\text{Start Balance}+\\text{Income}-\\text"
+"{Spending} $$</b>"
 msgstr ""
 "Für jede Periode Ihres simulierten Lebens berechnen wir Ihr Guthaben (in "
 "Punkten) wie folgt:\n"
