--- a/post_survey/locale/de/LC_MESSAGES/django.po
+++ b/post_survey/locale/de/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-15 23:33+0300\n"
-"PO-Revision-Date: 2021-09-16 15:34+0300\n"
+"POT-Creation-Date: 2021-10-19 21:46+0300\n"
+"PO-Revision-Date: 2021-10-19 21:47+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -189,10 +189,10 @@ msgstr "Aufgabe"
 
 #: .\post_survey\templates\post_survey\Risk_pref.html:22
 msgid ""
-"Now, you can invest part of (or all) your rewards in a risky investment.\n"
+"Now, you can invest part of (or all) your rewards in a risky asset.\n"
 "        <br>\n"
-"        With the risky investment, in 1/3 of the cases you will gain 2.5 "
-"times the amount you invest,\n"
+"        With the risky asset, in 1/3 of the cases you will gain 2.5 times "
+"the amount you invest,\n"
 "        in 2/3 of the cases you will lose the amount you invest."
 msgstr ""
 "Jetzt haben Sie die Möglichkeit, einen Teil Ihrer Belohnung in eine "
@@ -208,8 +208,8 @@ msgid ""
 "asset.\n"
 "        <br>\n"
 "        Use the slider to see your potential gain and loss with the risky "
-"asset\n"
-"        and decide what percentage of your rewards to invest in it."
+"asset and\n"
+"        decide what percentage of your rewards to invest in it."
 msgstr ""
 "Der Betrag, den Sie nicht investieren, bleibt derselbe unabhängig davon, ob "
 "Sie mit der risikoreichen Anlage gewinnen oder verlieren.\n"
@@ -224,8 +224,8 @@ msgid ""
 "You invest <span id=\"demo_risky\"></span>%% of your reward in the risky "
 "investment.\n"
 "        <br>\n"
-"        <b>In 1/3 of the cases, you will gain <span id=\"demo_win\"></span>%"
-"% over your original reward.\n"
+"        <b>In 1/3 of the cases, you will gain <span id=\"demo_win\"></span>"
+"%% over your original reward.\n"
 "            <br>\n"
 "            In 2/3 of the cases, you will lose <span id=\"demo_lose\"></span>"
 "%% of your original reward.\n"
@@ -242,34 +242,37 @@ msgstr ""
 "Ihrer ursprünglichen Belohnung verlieren.</b>\n"
 "        "
 
-#~ msgid ""
-#~ "In the following we offer you a bonus, in additional to your rewards with "
-#~ "this game.\n"
-#~ "        If you are interested, we will send you a second invitation, "
-#~ "which you just need to accept.\n"
-#~ "        After accepting, your rewards and the bonus will be immediately "
-#~ "paid into your account."
-#~ msgstr ""
-#~ "Im Folgenden bieten wir Ihnen einen Bonus, zusätzlich zu Ihrer Belohnung "
-#~ "mit diesem Spiel. Wenn Sie interessiert sind, senden wir Ihnen eine "
-#~ "zweite Einladung, die Sie nur noch annehmen müssen. Nach der Annahme der "
-#~ "Einladung werden sowohl Ihre Belohnung als auch der Bonus sofort Ihrem "
-#~ "Konto gutgeschrieben."
+#: .\post_survey\templates\post_survey\Time_pref.html:17
+msgid ""
+"In the following we offer you a bonus, in addition to your rewards with this "
+"game.\n"
+"        To obtain the bonus no further actions are needed."
+msgstr ""
+"Im Folgenden bieten wir Ihnen einen Bonus an, zusätzlich zu Ihrer Belohnung "
+"mit diesem Spiel. Um den Bonus zu erhalten, brauchen Sie nichts mehr zu tun."
 
-#~ msgid "Which option do you prefer?"
-#~ msgstr "Welche Alternativen ziehen Sie vor?"
+#: .\post_survey\templates\post_survey\Time_pref.html:20
+msgid "Which option do you prefer?"
+msgstr "Welche Alternative ziehen Sie vor?"
 
-#~ msgid "My rewards now, no bonus."
-#~ msgstr "Meine Belohnung jetzt, ohne Bonus."
+#: .\post_survey\templates\post_survey\Time_pref.html:22
+msgid "My rewards now, no bonus."
+msgstr "Meine Belohnung jetzt, ohne Bonus."
 
-#~ msgid "My rewards plus 5.0%% bonus, in one month."
-#~ msgstr "Meine Belohnung plus einen Bonus von 5.0%% in einem Monat."
+#: .\post_survey\templates\post_survey\Time_pref.html:24
+#, python-format
+msgid "My rewards plus 5.0%% bonus, in one month."
+msgstr "Meine Belohnung plus einen Bonus von 5.0%% in einem Monat."
 
-#~ msgid "My rewards plus 10.3%% bonus, in two months."
-#~ msgstr "Meine Belohnung plus einen Bonus von 10.3%% in zwei Monaten."
+#: .\post_survey\templates\post_survey\Time_pref.html:26
+#, python-format
+msgid "My rewards plus 10.3%% bonus, in two months."
+msgstr "Meine Belohnung plus einen Bonus von 10.3%% in zwei Monaten."
 
-#~ msgid "My rewards plus 15.8%% bonus, in three months."
-#~ msgstr "Meine Belohnung plus einen Bonus von 15.8%% in drei Monaten."
+#: .\post_survey\templates\post_survey\Time_pref.html:28
+#, python-format
+msgid "My rewards plus 15.8%% bonus, in three months."
+msgstr "Meine Belohnung plus einen Bonus von 15.8%% in drei Monaten."
 
 #~ msgid ""
 #~ "Now, you can invest part of (or all) your rewards in a risky investment."
