Typo on the Intro page fixed

--- a/instructions/locale/de/LC_MESSAGES/django.po
+++ b/instructions/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-19 21:46+0300\n"
-"PO-Revision-Date: 2021-10-15 23:33+0300\n"
+"PO-Revision-Date: 2021-10-21 15:00+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -149,8 +149,8 @@ msgstr "Guthaben"
 msgid ""
 "For each period in your life, we calculate your balance (in points):\n"
 "    <br>\n"
-"    <b>$$ \\text{End Balance}=\\text{Start Balance}+\\text{Income}-\\text"
-"{Spending} $$</b>"
+"    <b>$$ \\text{End Balance}=\\text{Start Balance}+\\text{Income}-"
+"\\text{Spending} $$</b>"
 msgstr ""
 "Für jede Periode Ihres simulierten Lebens berechnen wir Ihr Guthaben (in "
 "Punkten) wie folgt:\n"
@@ -246,7 +246,7 @@ msgid ""
 msgstr ""
 "Je nachdem wie Sie sich entscheiden, werden Sie <b>zusätzlich</b> zu Ihrer "
 "Grundvergütung eine <b>Belohnung</b> bekommen können. Diese zusätzliche "
-"Belohnung ist in den meisten zwischen EUR 10 und EUR 23. Höhere bzw. tiefe "
+"Belohnung ist in den Fallen zwischen EUR 10 und EUR 23. Höhere bzw. tiefe "
 "Beträge sind aber auch möglich."
 
 #: .\instructions\templates\instructions\Intro.html:28
