Update quiz app

--- a/instructions/locale/de/LC_MESSAGES/django.po
+++ b/instructions/locale/de/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-19 21:46+0300\n"
-"PO-Revision-Date: 2021-10-21 15:00+0300\n"
+"POT-Creation-Date: 2021-10-26 18:24+0300\n"
+"PO-Revision-Date: 2021-10-26 17:29+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -149,8 +149,8 @@ msgstr "Guthaben"
 msgid ""
 "For each period in your life, we calculate your balance (in points):\n"
 "    <br>\n"
-"    <b>$$ \\text{End Balance}=\\text{Start Balance}+\\text{Income}-"
-"\\text{Spending} $$</b>"
+"    <b>$$ \\text{End Balance}=\\text{Start Balance}+\\text{Income}-\\text"
+"{Spending} $$</b>"
 msgstr ""
 "Für jede Periode Ihres simulierten Lebens berechnen wir Ihr Guthaben (in "
 "Punkten) wie folgt:\n"
@@ -269,8 +269,8 @@ msgid ""
 "Only participants <b>correctly</b> answering the quiz questions will be\n"
 "        admitted to the real simulation and earn compensation."
 msgstr ""
-"<b>Nur</b> Teilenehmende, die diese Fragen korrekt beantworten, werden zu "
-"der realen Simulation zugelassen."
+"<b>Nur</b> Teilenehmende, die diese Fragen <b>korrekt</b> beantworten, "
+"werden zu der realen Simulation zugelassen."
 
 #: .\instructions\templates\instructions\Intro.html:36
 msgid ""
