--- a/post_survey/locale/de/LC_MESSAGES/django.po
+++ b/post_survey/locale/de/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-19 21:46+0300\n"
+"POT-Creation-Date: 2021-10-26 18:24+0300\n"
 "PO-Revision-Date: 2021-10-19 21:47+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -224,8 +224,8 @@ msgid ""
 "You invest <span id=\"demo_risky\"></span>%% of your reward in the risky "
 "investment.\n"
 "        <br>\n"
-"        <b>In 1/3 of the cases, you will gain <span id=\"demo_win\"></span>"
-"%% over your original reward.\n"
+"        <b>In 1/3 of the cases, you will gain <span id=\"demo_win\"></span>%"
+"% over your original reward.\n"
 "            <br>\n"
 "            In 2/3 of the cases, you will lose <span id=\"demo_lose\"></span>"
 "%% of your original reward.\n"
