--- a/trial_save/locale/de/LC_MESSAGES/django.po
+++ b/trial_save/locale/de/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-26 18:24+0300\n"
-"PO-Revision-Date: 2021-10-15 22:56+0300\n"
+"POT-Creation-Date: 2021-10-26 19:38+0300\n"
+"PO-Revision-Date: 2021-10-26 19:40+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -34,12 +34,16 @@ msgid ""
 "You will be removed from the game, and earn no compensation,\n"
 "            if you give two or more wrong answers."
 msgstr ""
+"Sie werden vom Spiel ausgeschossen werden und damit keine Entschädigung "
+"bekommen, falls Sie zwei oder mehrere Fragen nicht korrekt beantworten."
 
 #: .\trial_save\templates\trial_save\End.html:23
 msgid ""
 "If you need to read the instructions again,\n"
 "        you will find them at the bottom of the page with the test questions."
 msgstr ""
+"Falls Sie die Instruktionen noch einmal lesen möchten, werden Sie diese am "
+"Ende der Seite mit den Testfragen finden."
 
 #: .\trial_save\templates\trial_save\Period1.html:11
 #: .\trial_save\templates\trial_save\Period10.html:11
@@ -531,8 +535,8 @@ msgstr ""
 msgid ""
 "For each period in your life, we calculate your balance (in points):\n"
 "        <br>\n"
-"        <b>$$ \\text{End Balance}=\\text{Start Balance}+\\text{Income}-\\text"
-"{Spending} $$</b>"
+"        <b>$$ \\text{End Balance}=\\text{Start Balance}+\\text{Income}-"
+"\\text{Spending} $$</b>"
 msgstr ""
 "Für jede Periode Ihres simulierten Lebens berechnen wir Ihr Guthaben (in "
 "Punkten) wie folgt:\n"
@@ -654,13 +658,13 @@ msgid ""
 "This is the last period of the trial life.\n"
 "        In the last period, you need to spend the initial wealth of the "
 "period and the income you receive in this period.\n"
-"            Thus, you spend %(spend_save10)s points and get %(points_save10)"
-"s Eurocents as a <b>Reward</b> in Period 10."
+"            Thus, you spend %(spend_save10)s points and get "
+"%(points_save10)s Eurocents as a <b>Reward</b> in Period 10."
 msgstr ""
 "Dies ist die letzte Periode. In der letzten Periode müssen Sie das "
 "Startguthaben und das Einkommen, das Sie in dieser Periode erhalten, "
-"ausgeben. Sie geben also %(spend_save10)s Punkte aus und erhalten %"
-"(points_save10)s Eurocents als <b>Belohnung</b> in dieser Periode."
+"ausgeben. Sie geben also %(spend_save10)s Punkte aus und erhalten "
+"%(points_save10)s Eurocents als <b>Belohnung</b> in dieser Periode."
 
 #: .\trial_save\templates\trial_save\Period3.html:69
 msgid "End period balance "
@@ -703,11 +707,11 @@ msgstr "Zusammenfassung"
 #: .\trial_save\templates\trial_save\Summary.html:19
 #, python-format
 msgid ""
-"This is the end of the trial life. Your reward in the trial life is %"
-"(points_total1)s Eurocents.\n"
+"This is the end of the trial life. Your reward in the trial life is "
+"%(points_total1)s Eurocents.\n"
 "        This reward from the trial round will not be paid to you, as this is "
 "just a test."
 msgstr ""
-"Dies ist das Ende der Proberunde. Ihre Belohnung in der Proberunde ist %"
-"(points_total1)s Eurocents. Diese Belohnung aus der Proberunde wird Ihnen "
+"Dies ist das Ende der Proberunde. Ihre Belohnung in der Proberunde ist "
+"%(points_total1)s Eurocents. Diese Belohnung aus der Proberunde wird Ihnen "
 "nicht ausgezahlt, da dies nur ein Probelauf war."
